<?xml version="1.0"?>
<package format="3">
  <name>asbu_gooo</name>
  <version>0.0.1</version>
  <description>Launch files for Asbathama project</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2launch</build_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
